--- a/style.css
+++ b/style.css
@@ -11,6 +11,11 @@ body {
     overflow: hidden;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 .container {
     text-align: center;
     position: relative;
